--- a/woorischool/Views/Parents/ModalViews/ClassInfoViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ClassInfoViewController.xib
@@ -71,11 +71,10 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="분기 진행중" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Zu-Mr-HME" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
-                                    <rect key="frame" x="274" y="42" width="77" height="30"/>
+                                    <rect key="frame" x="271" y="42" width="80" height="30"/>
                                     <color key="backgroundColor" name="ice"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="24x-SQ-GHi"/>
-                                        <constraint firstAttribute="width" constant="77" id="uNf-Fx-b8k"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="13"/>
                                     <color key="textColor" name="greenishTeal"/>
@@ -83,6 +82,18 @@
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
                                             <real key="value" value="4"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="topInset">
+                                            <real key="value" value="0.0"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="bottomInset">
+                                            <real key="value" value="0.0"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="leftInset">
+                                            <real key="value" value="10"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="rightInset">
+                                            <real key="value" value="10"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </label>
@@ -256,6 +267,9 @@
                                                             <real key="value" value="5"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="ratingRequestEvnet:" destination="-1" eventType="touchUpInside" id="544-f8-lGW"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
