--- a/woorischool/Cells/VIews/StudentContactTableViewCell.xib
+++ b/woorischool/Cells/VIews/StudentContactTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,20 +24,20 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K9H-w6-gqA">
-                        <rect key="frame" x="0.0" y="0.0" width="342" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="342" height="178"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Std-rs-X2t">
-                                <rect key="frame" x="0.0" y="0.0" width="93.5" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="93.5" height="178"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="fMI-Ix-90b">
-                                        <rect key="frame" x="10" y="7" width="30" height="30"/>
+                                        <rect key="frame" x="10" y="74" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="2AU-s5-1gg"/>
                                             <constraint firstAttribute="width" constant="30" id="h3I-FY-6zF"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="홍길동" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cO7-Rz-FJl">
-                                        <rect key="frame" x="45" y="14" width="48.5" height="16.5"/>
+                                        <rect key="frame" x="45" y="81" width="48.5" height="16.5"/>
                                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                         <color key="textColor" name="greyishBrown"/>
                                         <nil key="highlightedColor"/>
@@ -45,20 +45,18 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
+                                    <constraint firstItem="cO7-Rz-FJl" firstAttribute="centerY" secondItem="Std-rs-X2t" secondAttribute="centerY" id="0J5-eW-XzQ"/>
                                     <constraint firstItem="fMI-Ix-90b" firstAttribute="leading" secondItem="Std-rs-X2t" secondAttribute="leading" constant="10" id="0fu-9h-7gR"/>
-                                    <constraint firstItem="cO7-Rz-FJl" firstAttribute="centerY" secondItem="Std-rs-X2t" secondAttribute="centerY" id="Gl2-z4-X35"/>
                                     <constraint firstAttribute="trailing" secondItem="cO7-Rz-FJl" secondAttribute="trailing" id="ONF-NU-qRP"/>
-                                    <constraint firstAttribute="bottom" secondItem="fMI-Ix-90b" secondAttribute="bottom" constant="7" id="bpZ-fs-Xp7"/>
-                                    <constraint firstItem="fMI-Ix-90b" firstAttribute="top" secondItem="Std-rs-X2t" secondAttribute="top" constant="7" id="gOb-6K-hIv"/>
-                                    <constraint firstItem="fMI-Ix-90b" firstAttribute="centerY" secondItem="Std-rs-X2t" secondAttribute="centerY" id="pcz-Ro-DKn"/>
+                                    <constraint firstItem="fMI-Ix-90b" firstAttribute="centerY" secondItem="Std-rs-X2t" secondAttribute="centerY" id="R47-Gy-GHa"/>
                                     <constraint firstItem="cO7-Rz-FJl" firstAttribute="leading" secondItem="fMI-Ix-90b" secondAttribute="trailing" constant="5" id="w7Y-ib-b1o"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fws-GV-eQc">
-                                <rect key="frame" x="93.5" y="0.0" width="124" height="44"/>
+                                <rect key="frame" x="93.5" y="0.0" width="124" height="178"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZMJ-Sh-zQB">
-                                        <rect key="frame" x="0.0" y="0.0" width="124" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="124" height="178"/>
                                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                         <color key="textColor" name="greyishBrown"/>
                                         <nil key="highlightedColor"/>
@@ -66,17 +64,17 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="ZMJ-Sh-zQB" secondAttribute="bottom" id="79e-KY-0Cj"/>
+                                    <constraint firstItem="ZMJ-Sh-zQB" firstAttribute="top" secondItem="fws-GV-eQc" secondAttribute="top" id="CKS-i4-1lz"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZMJ-Sh-zQB" secondAttribute="bottom" id="IHX-Br-8Hh"/>
                                     <constraint firstAttribute="trailing" secondItem="ZMJ-Sh-zQB" secondAttribute="trailing" id="IeF-fl-HdO"/>
-                                    <constraint firstItem="ZMJ-Sh-zQB" firstAttribute="top" secondItem="fws-GV-eQc" secondAttribute="top" id="j2X-y4-ehm"/>
                                     <constraint firstItem="ZMJ-Sh-zQB" firstAttribute="leading" secondItem="fws-GV-eQc" secondAttribute="leading" id="zjX-mu-B9O"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iKl-WU-y43">
-                                <rect key="frame" x="217.5" y="0.0" width="124.5" height="44"/>
+                                <rect key="frame" x="217.5" y="0.0" width="124.5" height="178"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zh-Ta-uBW" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="7" width="60" height="30"/>
+                                        <rect key="frame" x="0.0" y="74" width="60" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="LvA-jD-qRm"/>
                                         </constraints>
@@ -100,7 +98,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QO1-PK-Mvr" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                                        <rect key="frame" x="65" y="7" width="59.5" height="30"/>
+                                        <rect key="frame" x="65" y="74" width="59.5" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="ygc-8g-8vq"/>
                                         </constraints>
@@ -137,18 +135,18 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="Std-rs-X2t" firstAttribute="top" secondItem="K9H-w6-gqA" secondAttribute="top" id="4Le-QC-jtO"/>
                             <constraint firstItem="Std-rs-X2t" firstAttribute="width" secondItem="fws-GV-eQc" secondAttribute="width" multiplier="1.5:2" id="AOd-YQ-nnA"/>
                             <constraint firstItem="Std-rs-X2t" firstAttribute="leading" secondItem="K9H-w6-gqA" secondAttribute="leading" id="Ct2-CQ-J5N"/>
                             <constraint firstItem="Std-rs-X2t" firstAttribute="width" secondItem="iKl-WU-y43" secondAttribute="width" multiplier="1.5:2" id="HIy-9D-JjL"/>
+                            <constraint firstAttribute="bottom" secondItem="fws-GV-eQc" secondAttribute="bottom" id="I7L-cX-rmL"/>
                             <constraint firstItem="fws-GV-eQc" firstAttribute="top" secondItem="K9H-w6-gqA" secondAttribute="top" id="JOh-Nl-G7S"/>
+                            <constraint firstAttribute="bottom" secondItem="Std-rs-X2t" secondAttribute="bottom" id="Vqa-Wz-gDD"/>
                             <constraint firstItem="iKl-WU-y43" firstAttribute="top" secondItem="K9H-w6-gqA" secondAttribute="top" id="Z8y-M1-VM9"/>
-                            <constraint firstAttribute="bottom" secondItem="Std-rs-X2t" secondAttribute="bottom" id="ZTb-Uw-SLN"/>
                             <constraint firstItem="iKl-WU-y43" firstAttribute="leading" secondItem="fws-GV-eQc" secondAttribute="trailing" id="aNr-Na-6wf"/>
                             <constraint firstItem="fws-GV-eQc" firstAttribute="leading" secondItem="Std-rs-X2t" secondAttribute="trailing" id="b7m-Ct-M9Q"/>
-                            <constraint firstAttribute="bottom" secondItem="fws-GV-eQc" secondAttribute="bottom" id="gpT-0d-CTK"/>
                             <constraint firstAttribute="bottom" secondItem="iKl-WU-y43" secondAttribute="bottom" id="hSy-Dd-1f7"/>
                             <constraint firstAttribute="trailing" secondItem="iKl-WU-y43" secondAttribute="trailing" id="teH-ft-9G1"/>
-                            <constraint firstItem="Std-rs-X2t" firstAttribute="top" secondItem="K9H-w6-gqA" secondAttribute="top" id="xsi-gi-VqN"/>
                         </constraints>
                     </view>
                 </subviews>
