--- a/woorischool/Cells/VIews/ChattingRoomTableViewCell.xib
+++ b/woorischool/Cells/VIews/ChattingRoomTableViewCell.xib
@@ -23,7 +23,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="tuN-DW-CYx" customClass="CircleImageView" customModule="우리스쿨" customModuleProvider="target">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempEmptyImage" translatesAutoresizingMaskIntoConstraints="NO" id="tuN-DW-CYx" customClass="CircleImageView" customModule="우리스쿨" customModuleProvider="target">
                         <rect key="frame" x="22" y="32.5" width="54" height="54"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="54" id="yOC-Bg-9Fd"/>
@@ -113,7 +113,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="profilePlaceHolder" width="60" height="60"/>
+        <image name="tempEmptyImage" width="70" height="70"/>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
