--- a/woorischool/Cells/VIews/ClassBoardTableViewCell.xib
+++ b/woorischool/Cells/VIews/ClassBoardTableViewCell.xib
@@ -48,12 +48,17 @@
                                     </view>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="r4s-vM-p5O">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="r4s-vM-p5O" customClass="CustomImageView" customModule="우리스쿨" customModuleProvider="target">
                                 <rect key="frame" x="20" y="82" width="36" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="36" id="MHP-qQ-A7n"/>
                                     <constraint firstAttribute="height" constant="36" id="YHy-Ss-CjV"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
+                                        <real key="value" value="18"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yff-aA-DPE">
                                 <rect key="frame" x="64" y="91.5" width="37" height="17.5"/>
@@ -79,7 +84,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6vo-gq-g7R">
                                         <rect key="frame" x="0.0" y="0.0" width="244" height="176"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempImage" translatesAutoresizingMaskIntoConstraints="NO" id="QZj-Xs-6AO">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QZj-Xs-6AO">
                                                 <rect key="frame" x="0.0" y="0.0" width="244" height="176"/>
                                                 <color key="tintColor" name="brownGrey"/>
                                             </imageView>
@@ -193,7 +198,6 @@
         <image name="ellipses.bubble" catalog="system" width="64" height="54"/>
         <image name="heart" catalog="system" width="64" height="54"/>
         <image name="profilePlaceHolder" width="60" height="60"/>
-        <image name="tempImage" width="276" height="183"/>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
