--- a/woorischool/Cells/VIews/OtherChattingTableViewCell.xib
+++ b/woorischool/Cells/VIews/OtherChattingTableViewCell.xib
@@ -23,7 +23,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="348" height="291"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempImage" translatesAutoresizingMaskIntoConstraints="NO" id="lJp-lk-u73" customClass="CircleImageView" customModule="우리스쿨" customModuleProvider="target">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="lJp-lk-u73" customClass="CircleImageView" customModule="우리스쿨" customModuleProvider="target">
                         <rect key="frame" x="20" y="10" width="35" height="35"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -37,7 +37,7 @@
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempImage" translatesAutoresizingMaskIntoConstraints="NO" id="Gz2-co-Zjm">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gz2-co-Zjm">
                         <rect key="frame" x="65" y="24" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="100" id="RbU-5k-lxY"/>
@@ -124,7 +124,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="tempImage" width="276" height="183"/>
+        <image name="profilePlaceHolder" width="60" height="60"/>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
