--- a/woorischool/Cells/VIews/ReReplyTableViewCell.xib
+++ b/woorischool/Cells/VIews/ReReplyTableViewCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,10 +23,17 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="replyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Hde-3a-Fzf">
-                        <rect key="frame" x="35" y="62.5" width="18" height="18"/>
+                        <rect key="frame" x="35" y="18.5" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="ZqW-Rn-Bgg"/>
                             <constraint firstAttribute="height" constant="18" id="vjU-dD-9SH"/>
+                        </constraints>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="zkV-gG-r6o" customClass="CircleImageView" customModule="우리스쿨" customModuleProvider="target">
+                        <rect key="frame" x="64" y="10" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="Zwi-ks-sRV"/>
+                            <constraint firstAttribute="width" constant="35" id="fGs-ny-MPt"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w9J-QZ-APZ" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
@@ -105,13 +111,6 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="zkV-gG-r6o">
-                        <rect key="frame" x="64" y="54" width="35" height="35"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="35" id="Zwi-ks-sRV"/>
-                            <constraint firstAttribute="width" constant="35" id="fGs-ny-MPt"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019.03.21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEm-xz-HKW">
                         <rect key="frame" x="239.5" y="143" width="60.5" height="14"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
@@ -121,9 +120,9 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="FEm-xz-HKW" secondAttribute="trailing" constant="20" id="3Ra-2f-0RB"/>
+                    <constraint firstItem="zkV-gG-r6o" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="4SN-uZ-xu1"/>
                     <constraint firstItem="w9J-QZ-APZ" firstAttribute="leading" secondItem="zkV-gG-r6o" secondAttribute="trailing" constant="7" id="895-hL-sQP"/>
                     <constraint firstItem="Hde-3a-Fzf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="35" id="8HZ-X9-zmE"/>
-                    <constraint firstItem="zkV-gG-r6o" firstAttribute="centerY" secondItem="w9J-QZ-APZ" secondAttribute="centerY" id="UhE-55-FSY"/>
                     <constraint firstItem="Hde-3a-Fzf" firstAttribute="centerY" secondItem="zkV-gG-r6o" secondAttribute="centerY" id="gxz-ge-BA5"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="FEm-xz-HKW" secondAttribute="bottom" constant="12" id="h0E-LX-9nr"/>
                     <constraint firstItem="FEm-xz-HKW" firstAttribute="top" secondItem="w9J-QZ-APZ" secondAttribute="bottom" id="kTE-Jd-prB"/>
