--- a/woorischool/Views/Global/ModalViews/BoardDetailViewController.xib
+++ b/woorischool/Views/Global/ModalViews/BoardDetailViewController.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -66,15 +65,9 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byl-HT-8nQ">
-                                            <rect key="frame" x="64" y="12" width="37" height="17.5"/>
+                                            <rect key="frame" x="64" y="21.5" width="37" height="17.5"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="15"/>
                                             <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fkH-BV-ejA">
-                                            <rect key="frame" x="64" y="34" width="29.5" height="14"/>
-                                            <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="12"/>
-                                            <color key="textColor" name="brownGrey"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BjB-RF-Hr3">
@@ -154,18 +147,16 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
+                                        <constraint firstItem="Byl-HT-8nQ" firstAttribute="centerY" secondItem="g9f-Du-3v0" secondAttribute="centerY" id="0Lt-es-A4I"/>
                                         <constraint firstItem="g9f-Du-3v0" firstAttribute="leading" secondItem="fen-hI-mN7" secondAttribute="leading" constant="20" id="2KY-Nd-305"/>
                                         <constraint firstItem="01J-G3-rq5" firstAttribute="leading" secondItem="fen-hI-mN7" secondAttribute="leading" constant="20" id="374-z7-Lxu"/>
                                         <constraint firstAttribute="bottom" secondItem="ykG-YC-BiJ" secondAttribute="bottom" constant="20" id="6nI-Bf-Xuk"/>
-                                        <constraint firstItem="fkH-BV-ejA" firstAttribute="bottom" secondItem="g9f-Du-3v0" secondAttribute="bottom" id="9V0-kx-7Rs"/>
                                         <constraint firstAttribute="trailing" secondItem="01J-G3-rq5" secondAttribute="trailing" constant="20" id="BQn-HC-OaN"/>
-                                        <constraint firstItem="fkH-BV-ejA" firstAttribute="leading" secondItem="g9f-Du-3v0" secondAttribute="trailing" constant="8" id="K6p-47-HNQ"/>
                                         <constraint firstAttribute="trailing" secondItem="BjB-RF-Hr3" secondAttribute="trailing" constant="20" id="Rso-sp-xZI"/>
                                         <constraint firstItem="BjB-RF-Hr3" firstAttribute="centerY" secondItem="g9f-Du-3v0" secondAttribute="centerY" id="Xtb-uR-MTf"/>
                                         <constraint firstItem="Byl-HT-8nQ" firstAttribute="leading" secondItem="g9f-Du-3v0" secondAttribute="trailing" constant="8" id="b4V-7n-7hS"/>
                                         <constraint firstItem="ykG-YC-BiJ" firstAttribute="leading" secondItem="fen-hI-mN7" secondAttribute="leading" id="cl2-xt-sa7"/>
                                         <constraint firstItem="ykG-YC-BiJ" firstAttribute="top" secondItem="01J-G3-rq5" secondAttribute="bottom" constant="10" id="g9J-aN-aEN"/>
-                                        <constraint firstItem="Byl-HT-8nQ" firstAttribute="top" secondItem="g9f-Du-3v0" secondAttribute="top" id="h3l-jl-5Oz"/>
                                         <constraint firstItem="g9f-Du-3v0" firstAttribute="top" secondItem="fen-hI-mN7" secondAttribute="top" constant="12" id="jcD-RQ-fs6"/>
                                         <constraint firstItem="01J-G3-rq5" firstAttribute="top" secondItem="g9f-Du-3v0" secondAttribute="bottom" constant="10" id="nnM-1W-dhD"/>
                                         <constraint firstAttribute="trailing" secondItem="ykG-YC-BiJ" secondAttribute="trailing" id="pv3-7N-9E4"/>
