--- a/woorischool/Views/Parents/ModalViews/ClassInfoViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ClassInfoViewController.xib
@@ -49,7 +49,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T04-3C-gb7">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="685"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="730"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pangIcon" translatesAutoresizingMaskIntoConstraints="NO" id="bnE-eL-uGA">
                                     <rect key="frame" x="20" y="20" width="45" height="45"/>
@@ -233,8 +233,51 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wci-gq-2Gq">
+                                    <rect key="frame" x="0.0" y="180" width="375" height="1"/>
+                                    <color key="backgroundColor" name="veryLightPink"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="8YY-7z-0Xl"/>
+                                    </constraints>
+                                </view>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R9M-Gn-1ma">
+                                    <rect key="frame" x="0.0" y="181" width="187" height="54"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="54" id="L2H-xN-C8D"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="16"/>
+                                    <inset key="titleEdgeInsets" minX="11" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <state key="normal" title="수업 게시판 보기" image="boardIcon">
+                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="showBoardListEvent" destination="-1" eventType="touchUpInside" id="aDl-Yz-QwN"/>
+                                    </connections>
+                                </button>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yFS-UW-4KU">
+                                    <rect key="frame" x="187" y="191" width="1" height="34"/>
+                                    <color key="backgroundColor" name="veryLightPink"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="1" id="1ve-pc-gp5"/>
+                                    </constraints>
+                                </view>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xxy-tS-AwH">
+                                    <rect key="frame" x="188" y="181" width="187" height="54"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="54" id="pPD-bQ-AeV"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="16"/>
+                                    <inset key="titleEdgeInsets" minX="11" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="3" maxX="0.0" maxY="0.0"/>
+                                    <state key="normal" title="강사 1:1 문의" image="chatIcon">
+                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="showOneToOneChatViewEvent" destination="-1" eventType="touchUpInside" id="JG2-Gb-H6l"/>
+                                    </connections>
+                                </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bRF-nF-mAu">
-                                    <rect key="frame" x="0.0" y="190" width="375" height="495"/>
+                                    <rect key="frame" x="0.0" y="235" width="375" height="495"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w05-Dp-2kp" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                                             <rect key="frame" x="18" y="12" width="339" height="75"/>
@@ -643,20 +686,33 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="3Zu-Mr-HME" firstAttribute="centerY" secondItem="rnK-wU-6hl" secondAttribute="centerY" id="4Dv-PW-ocp"/>
+                                <constraint firstItem="R9M-Gn-1ma" firstAttribute="leading" secondItem="T04-3C-gb7" secondAttribute="leading" id="54w-CT-FVc"/>
+                                <constraint firstAttribute="trailing" secondItem="Xxy-tS-AwH" secondAttribute="trailing" id="Bhj-pZ-CQT"/>
+                                <constraint firstItem="bRF-nF-mAu" firstAttribute="top" secondItem="yFS-UW-4KU" secondAttribute="bottom" constant="10" id="DDQ-8q-owr"/>
                                 <constraint firstItem="bnE-eL-uGA" firstAttribute="top" secondItem="T04-3C-gb7" secondAttribute="top" constant="20" id="Dp5-jb-PNP"/>
                                 <constraint firstItem="jPw-zk-wzp" firstAttribute="top" secondItem="bnE-eL-uGA" secondAttribute="top" id="FKb-QQ-T4i"/>
                                 <constraint firstItem="rnK-wU-6hl" firstAttribute="leading" secondItem="bnE-eL-uGA" secondAttribute="trailing" constant="8" id="LAy-JT-asB"/>
                                 <constraint firstItem="FVP-Re-9aC" firstAttribute="top" secondItem="bnE-eL-uGA" secondAttribute="bottom" constant="20" id="M7r-Ee-bdK"/>
                                 <constraint firstItem="rnK-wU-6hl" firstAttribute="bottom" secondItem="bnE-eL-uGA" secondAttribute="bottom" id="N5V-e2-vbA"/>
+                                <constraint firstItem="yFS-UW-4KU" firstAttribute="leading" secondItem="R9M-Gn-1ma" secondAttribute="trailing" id="Nyj-aM-Q0r"/>
+                                <constraint firstItem="Xxy-tS-AwH" firstAttribute="leading" secondItem="yFS-UW-4KU" secondAttribute="trailing" id="QQQ-Zg-rYg"/>
                                 <constraint firstItem="bnE-eL-uGA" firstAttribute="leading" secondItem="T04-3C-gb7" secondAttribute="leading" constant="20" id="Rci-ZF-ULY"/>
+                                <constraint firstItem="bRF-nF-mAu" firstAttribute="top" secondItem="Xxy-tS-AwH" secondAttribute="bottom" id="SCm-xf-lYt"/>
                                 <constraint firstItem="FVP-Re-9aC" firstAttribute="leading" secondItem="T04-3C-gb7" secondAttribute="leading" constant="17" id="Sjx-Ve-FeQ"/>
+                                <constraint firstItem="Wci-gq-2Gq" firstAttribute="leading" secondItem="T04-3C-gb7" secondAttribute="leading" id="TVH-Wg-fzo"/>
+                                <constraint firstItem="yFS-UW-4KU" firstAttribute="top" secondItem="Wci-gq-2Gq" secondAttribute="bottom" constant="10" id="TrS-6T-hA2"/>
                                 <constraint firstAttribute="bottom" secondItem="bRF-nF-mAu" secondAttribute="bottom" id="VAa-VN-Jg7"/>
                                 <constraint firstAttribute="trailing" secondItem="3Zu-Mr-HME" secondAttribute="trailing" constant="24" id="XPu-xX-c0Y"/>
+                                <constraint firstItem="bRF-nF-mAu" firstAttribute="top" secondItem="R9M-Gn-1ma" secondAttribute="bottom" id="dgG-OG-xVc"/>
+                                <constraint firstItem="Xxy-tS-AwH" firstAttribute="top" secondItem="Wci-gq-2Gq" secondAttribute="bottom" id="eI3-du-dNZ"/>
                                 <constraint firstAttribute="trailing" secondItem="bRF-nF-mAu" secondAttribute="trailing" id="fmL-CD-e77"/>
                                 <constraint firstItem="bRF-nF-mAu" firstAttribute="leading" secondItem="T04-3C-gb7" secondAttribute="leading" id="h6r-V2-sWH"/>
                                 <constraint firstAttribute="trailing" secondItem="FVP-Re-9aC" secondAttribute="trailing" constant="17" id="hO5-6F-fCh"/>
+                                <constraint firstAttribute="trailing" secondItem="Wci-gq-2Gq" secondAttribute="trailing" id="jhc-WL-Mfw"/>
                                 <constraint firstItem="jPw-zk-wzp" firstAttribute="leading" secondItem="bnE-eL-uGA" secondAttribute="trailing" constant="8" id="kQu-1w-mFJ"/>
-                                <constraint firstItem="bRF-nF-mAu" firstAttribute="top" secondItem="FVP-Re-9aC" secondAttribute="bottom" constant="30" id="rAe-su-yV0"/>
+                                <constraint firstItem="R9M-Gn-1ma" firstAttribute="width" secondItem="Xxy-tS-AwH" secondAttribute="width" id="lbd-Me-Gmw"/>
+                                <constraint firstItem="R9M-Gn-1ma" firstAttribute="top" secondItem="Wci-gq-2Gq" secondAttribute="bottom" id="u2S-RJ-buo"/>
+                                <constraint firstItem="Wci-gq-2Gq" firstAttribute="top" secondItem="FVP-Re-9aC" secondAttribute="bottom" constant="20" id="uXb-RV-pwE"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -683,6 +739,8 @@
         </view>
     </objects>
     <resources>
+        <image name="boardIcon" width="18" height="18"/>
+        <image name="chatIcon" width="17" height="16"/>
         <image name="docIcon" width="19" height="24"/>
         <image name="pangIcon" width="56" height="56"/>
         <namedColor name="brownGrey">
