--- a/woorischool/Views/Teachers/ModalViews/TeacherStudentListViewController.xib
+++ b/woorischool/Views/Teachers/ModalViews/TeacherStudentListViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,6 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TeacherStudentListViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
+                <outlet property="classTimeLabel" destination="0rI-PH-5gb" id="7N5-iw-ck4"/>
                 <outlet property="studentCountLabel" destination="szt-cJ-h1h" id="yYM-20-Wvv"/>
                 <outlet property="studentTableView" destination="cgR-Sb-sf5" id="3EM-nx-hCz"/>
                 <outlet property="studentTableViewHeightConstraint" destination="uMo-ji-tLV" id="Uyu-mc-GeQ"/>
