--- a/woorischool/Views/Teachers/ModalViews/TeacherHomeViewController.xib
+++ b/woorischool/Views/Teachers/ModalViews/TeacherHomeViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,6 +24,7 @@
                 <outlet property="classTableViewHeightContraint" destination="hYD-9j-xqH" id="5S3-Qs-Y7U"/>
                 <outlet property="nameLabel" destination="TFf-Qj-Xb2" id="UNj-ok-928"/>
                 <outlet property="notiBtn" destination="a7N-dV-SvW" id="bab-bb-sAv"/>
+                <outlet property="profileImageView" destination="fHc-rc-JIJ" id="rji-LQ-fkk"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -32,7 +33,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="fHc-rc-JIJ">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilePlaceHolder" translatesAutoresizingMaskIntoConstraints="NO" id="fHc-rc-JIJ" customClass="CircleImageView" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="20" y="54" width="55" height="55"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="55" id="Zcj-3R-8a4"/>
@@ -63,6 +64,9 @@
                             <state key="normal" title="Button">
                                 <color key="titleColor" name="greyishBrown"/>
                             </state>
+                            <connections>
+                                <action selector="showNotiList" destination="-1" eventType="touchUpInside" id="TDf-4i-lIt"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
