--- a/woorischool/Views/Teachers/ModalViews/TeacherMainViewController.xib
+++ b/woorischool/Views/Teachers/ModalViews/TeacherMainViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -52,6 +52,7 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="s57-Ft-PoN">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="2E6-G8-bko"/>
                                         <constraint firstAttribute="height" constant="20" id="F0G-eY-Smx"/>
@@ -60,7 +61,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="홈" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3x7-6j-Nad">
                                     <rect key="frame" x="20.5" y="30" width="9" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -93,6 +94,7 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="boardMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="VoA-b6-53B">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="0JS-eW-leD"/>
                                         <constraint firstAttribute="width" constant="20" id="pER-1Y-8Md"/>
@@ -101,7 +103,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="게시판" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gd-dT-3Gj">
                                     <rect key="frame" x="12" y="30" width="26" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -134,6 +136,7 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="talkMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="lLo-NL-0iD">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="dLi-Yx-qq4"/>
                                         <constraint firstAttribute="height" constant="20" id="fz8-Pd-mUe"/>
@@ -142,7 +145,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소통방" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1B-zL-iff">
                                     <rect key="frame" x="12" y="30" width="26" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -173,17 +176,18 @@
                                         <constraint firstAttribute="height" constant="2" id="Fvf-KY-2bV"/>
                                     </constraints>
                                 </view>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Kas-SO-2hA">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mainMoreIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Kas-SO-2hA">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="9EA-RC-ZRf"/>
                                         <constraint firstAttribute="height" constant="20" id="BtI-2B-QUT"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cL-ms-DWZ">
-                                    <rect key="frame" x="17.5" y="30" width="15.5" height="20"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="더보기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cL-ms-DWZ">
+                                    <rect key="frame" x="12" y="30" width="26" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -250,8 +254,11 @@
     <resources>
         <image name="boardMainIcon" width="23" height="19"/>
         <image name="homeMainIcon" width="22" height="21"/>
-        <image name="myMainIcon" width="23" height="20"/>
+        <image name="mainMoreIcon" width="21" height="5"/>
         <image name="talkMainIcon" width="23" height="18"/>
+        <namedColor name="brownGrey">
+            <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="greenishTeal">
             <color red="0.17254901960784313" green="0.77647058823529413" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
